--- a/src/Pages/TogglTrackPage/togglTrackPage.module.css
+++ b/src/Pages/TogglTrackPage/togglTrackPage.module.css
@@ -36,15 +36,16 @@
     /* border:1px solid green; */
    
     
-    padding:15px;
+    padding:20px 20px 0px 20px;
     display: flex;
     
     justify-content: space-around;
+    align-items: center;
     
    
     font-size: 20px;
 
-    line-height: 14px;
+    /* line-height: 14px; */
    
 }
 
@@ -95,8 +96,8 @@
 .sideBar_track_div_heading{
     width:74%;
     margin:auto;
-    margin-top: 5px;
-    font-size: 11px;
+    margin-top: 15px;
+    font-size: 13px;
     /* border:1px solid green; */
     color:#7d707e;
 }
@@ -105,7 +106,7 @@
     width: 90%;
     margin: auto;
     /* margin-top: 5px; */
-    font-size: 15px;
+    font-size: 15.5px;
     height: 30px;
     line-height: 30px;
     display: flex;
@@ -237,7 +238,7 @@ text-overflow: ellipsis;
        gap:20px;
         align-items: center;
         color:#95899b;
-        height:80px;
+        height:100px;
         padding:10px;
         box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
     }
@@ -272,4 +273,8 @@ color:#d164c5
     margin-top: 5px;
     color:#95899b;
     font-size: 20px;
+}
+.stop_icon{
+    font-size: 40px;
+    color:#e87161
 }
