--- a/src/Styles/Signup.module.css
+++ b/src/Styles/Signup.module.css
@@ -38,7 +38,7 @@
         width: 50%;
         margin: auto;
         padding:4%;
-        height:600px;
+        height:700px;
         margin-top: -60px;
         z-index: 1;
         opacity:1;
@@ -146,7 +146,9 @@
         font-weight: 400;
         font-size: 0.875rem;
         line-height: 1.28;
-        
+    }
+    .submitBtn:disabled {
+       background-color: red !important;
     }
     .submitBtn:hover{
         background-color: rgba(65,42,76,255);
@@ -156,7 +158,7 @@
         color: white;
         text-align: justify;
         margin-top: 30px;
-        font-size: 10px;
+        font-size: 15px;
         padding-bottom: 20px;
       }
 
