added some more css and functionality

--- a/src/Pages/TogglTrackPage/togglTrackPage.module.css
+++ b/src/Pages/TogglTrackPage/togglTrackPage.module.css
@@ -1,280 +1,392 @@
-*{
+* {
   margin: 0px;
-  padding:0px;
+  padding: 0px;
   box-sizing: border-box;
-  letter-spacing: .5px;
+  letter-spacing: 0.5px;
 }
 
-.togglTrackPage_main_container{
-   
-    display: flex;
-    width:100%;
-  
-    height:700px;
-    /* border: 1px solid; */
-    color:white;
-   position: relative;
+.togglTrackPage_main_container {
+  display: flex;
+  width: 100%;
+
+  height: 700px;
+
+  color: white;
+  position: relative;
 }
 
-.sideBar_container{
-    background-color:#2c1338;
-    /* border: 1px solid red; */
-    height: 700px;
-    position: fixed;
-    width:13%
+.sideBar_container {
+  background-color: #2c1338;
+
+  height: 700px;
+  position: fixed;
+  width: 13%;
 }
 
-.sideBar_header{
-    font-family: Roboto, Helvetica, sans-serif;
-   
-    margin: auto;
-    
-   
-    width: 13%;
-   
-    position: fixed;
-    /* border:1px solid green; */
-   
-    
-    padding:20px 20px 0px 20px;
-    display: flex;
-    
-    justify-content: space-around;
-    align-items: center;
-    
-   
-    font-size: 20px;
+.sideBar_header {
+  font-family: Roboto, Helvetica, sans-serif;
 
-    /* line-height: 14px; */
-   
+  margin: auto;
+
+  width: 13%;
+
+  position: fixed;
+
+  padding: 20px 20px 0px 20px;
+  display: flex;
+
+  justify-content: space-around;
+  align-items: center;
+
+  font-size: 20px;
 }
 
-
-
-.sideBar_header_toggl{
-    font-weight: bold;
-    font-size: 20px;
-    color:#dd6fd1;
-   
-   
-
+.sideBar_header_toggl {
+  font-weight: bold;
+  font-size: 20px;
+  color: #dd6fd1;
 }
-.sideBar_header_track{
-    margin-left: 5px;
-    color:#dd6fd1;
+.sideBar_header_track {
+  margin-left: 5px;
+  color: #dd6fd1;
 }
 
+.sideBar_Bars {
+  position: relative;
 
-.sideBar_Bars{
-    position: relative;
-    
-    margin-top: 60px;
-    font-size: 12px;
-    height: 260px;
-    overflow-y: scroll;
-    
-   
+  margin-top: 60px;
+  font-size: 12px;
+  height: 260px;
+  overflow-y: scroll;
 }
 
-
-  ::-webkit-scrollbar {
-    width: 1px;
+::-webkit-scrollbar {
+  width: 1px;
 }
- 
+
 ::-webkit-scrollbar-track {
-    background-color:black;
-    -webkit-border-radius: 5px;
-    border-radius: 5px;
+  background-color: black;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
 }
 
 ::-webkit-scrollbar-thumb {
-    -webkit-border-radius: 5px;
-    border-radius: 5px;
-    background: #dd6fd1; 
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+  background: #dd6fd1;
 }
 
-.sideBar_track_div_heading{
-    width:74%;
-    margin:auto;
-    margin-top: 15px;
-    font-size: 13px;
-    /* border:1px solid green; */
-    color:#7d707e;
-}
-.sideBar_track_div_inside_div{
-    
-    width: 90%;
-    margin: auto;
-    /* margin-top: 5px; */
-    font-size: 15.5px;
-    height: 30px;
-    line-height: 30px;
-    display: flex;
-    align-items: center;
-    gap:10px;
+.sideBar_track_div_heading {
+  width: 74%;
+  margin: auto;
+  margin-top: 15px;
+  font-size: 13px;
 
+  color: #7d707e;
 }
-.icon{
-    margin-left: 15px;
-  
+.sideBar_track_div_inside_div {
+  width: 90%;
+  margin: auto;
+
+  font-size: 15.5px;
+  height: 30px;
+  line-height: 30px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.icon {
+  margin-left: 15px;
 }
 
-.sideBar_trial_div{
-    height:110px;
-    width:100%;
-    background-color: #412a4c;
-    margin-top: 15px;
-    /* font-size: 12px; */
-    line-height: 14px;
-    
-   
-   
-    padding:10px ; 
+.sideBar_trial_div {
+  height: 110px;
+  width: 100%;
+  background-color: #412a4c;
+  margin-top: 15px;
+
+  line-height: 14px;
+
+  padding: 10px;
 }
-.sideBar_trial{
-    padding-bottom: 5px;
-    margin-left:15px;
-    font-size: 14px;
+.sideBar_trial {
+  padding-bottom: 5px;
+  margin-left: 15px;
+  font-size: 14px;
 }
 
-
-.sideBar_upgrade{
-    margin-top:5px ;
-    text-decoration: underline;
+.sideBar_upgrade {
+  margin-top: 5px;
+  text-decoration: underline;
 }
 
-.sideBar_email_data{
-    width:80%;
-    height: 60px;
-    margin: auto;
-    margin-top: 10px;
-    border:1px solid white;
-    display: flex;
-    
-   justify-content: space-around;
-    border-radius: 10px;
-    /* overflow: hidden ;
-    text-overflow: ellipsis; */
-    padding-top: 10px;
-    font-size: 15px;
-    /* background-color: black; */
-    color: white;
-  
+.sideBar_email_data {
+  width: 80%;
+  height: 60px;
+  margin: auto;
+  margin-top: 10px;
+  border: 1px solid white;
+  display: flex;
 
-}
-/* .bag_icon{
-    
-} */
-/* .sideBar_thirty{
-    margin-top:10px ;
-} */
-.email_id{
-    width:53%;
-    height:20px;
-    overflow: hidden;
-    text-overflow: ellipsis;
-}
-.hr{
-    margin-top: 10px;
-}
-.resume_onboarding{
-margin-left: 10px;
-font-size: 14px;
-letter-spacing: 0px;
+  justify-content: space-around;
+  border-radius: 10px;
+
+  padding-top: 10px;
+  font-size: 15px;
+
+  color: white;
 }
 
-.sidebar_footer{
-    width:100%;
-    margin: auto;
-    margin-top: 5px;
-    display: flex;
-    align-items: center;
-    font-size: 14px;
-    justify-content: space-evenly;
-   
+.email_id {
+  width: 53%;
+  height: 20px;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
-.footer_email{
-height:20px;
-font-size: 15px;
-width:50%;
-overflow: hidden;
-text-overflow: ellipsis;
+.hr {
+  margin-top: 10px;
+}
+.resume_onboarding {
+  margin-left: 10px;
+  font-size: 14px;
+  letter-spacing: 0px;
 }
 
-.emoji{
-    font-size: 25px;
+.sidebar_footer {
+  width: 100%;
+  margin: auto;
+  margin-top: 5px;
+  display: flex;
+  align-items: center;
+  font-size: 14px;
+  justify-content: space-evenly;
 }
-.sideBar_track_div_heading_workspace{
-    width:74%;
-    margin:auto;
-    margin-top: 10px;
-    font-size: 11px;
-    /* border:1px solid green; */
-    color:#7d707e;
+.footer_email {
+  height: 20px;
+  font-size: 15px;
+  width: 50%;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
-.resume_onboarding{
-    width: 80%;
-    margin: auto;
-    margin-top:20px;
-    display: flex;
-    gap:15px
+
+.emoji {
+  font-size: 25px;
+}
+.sideBar_track_div_heading_workspace {
+  width: 74%;
+  margin: auto;
+  margin-top: 10px;
+  font-size: 11px;
+
+  color: #7d707e;
+}
+.resume_onboarding {
+  width: 80%;
+  margin: auto;
+  margin-top: 20px;
+  display: flex;
+  gap: 15px;
 }
 
 /*  RIGHT Container */
 
-.right_container{
-    /* background-color: blue; */
-    
-    /* border: 1px solid blue; */
-    width: 87%;
-    height: 700px;
-    position: absolute;
-    left:13%
-    }
-    .right_topsection{
-        width:100%;
-        /* border:1px solid red; */
-        display: flex;
-       gap:20px;
-        align-items: center;
-        color:#95899b;
-        height:100px;
-        padding:10px;
-        box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-    }
-    
+.right_container {
+  width: 87%;
+  height: 700px;
+  position: absolute;
+  color: #bbb3bf;
+  left: 13%;
+}
+.right_topsection {
+  width: 100%;
 
-.right_input_div{
-    width:63%;
-    /* border:1px solid green; */
-    height:40px;
-    border: none;
+  display: flex;
+  gap: 20px;
+  align-items: center;
+  color: #95899b;
+  height: 80px;
+  padding: 10px;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+
+.right_input_div {
+  width: 63%;
+
+  height: 40px;
+  border: none;
+  font-weight: bold;
+}
+.right_input_div > input {
+  width: 100%;
+  height: 40px;
+  border-color: white;
+  border: 0;
+}
+
+.play_icon {
+  font-size: 40px;
+  color: #d164c5;
+}
+.second_play_icon {
+  color: black;
+  font-size: 20px;
+}
+.plus_icon {
+  margin-top: 5px;
+  color: #95899b;
+  font-size: 20px;
+}
+.stop_icon {
+  font-size: 40px;
+  color: #e87161;
+}
+
+.right_timer{
     font-weight: bold;
+}
+
+
+.create_button{
+    background-color:#fef9f7;
+    padding:10px;
+    border-radius:10px;
+}
+
+.create_button:hover{
+    background-color:#e0a5da;
+    color: black;
+}
+
+/*  calender  */
+
+
+
+
+
+
+
+.calendar_time_table {
+  color: black;
+  width: 100%;
+  height: 350px;
+  text-align: center;
+  overflow-y: scroll;
+  background-color: #fef9f7;
+  
+}
+
+
+.calender_first_heading {
+  display: flex;
+  height: 60px;
+  gap: 20px;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+}
+
+.calendar_time_table th {
+  border-left: 1px solid #e1e1e1;
+
+  width: 200px;
+  padding: 15px;
+}
+
+.calendar_time_table td {
+  border: 1px solid #e1e1e1;
+  height: 55px;
+  width: 180px;
+  font-size: 12px;
+  padding: 20px;
+}
+
+.date_span {
+  font-size: 22px;
+  font-weight: 300;
+  padding-right: 10px;
+  padding-top: 35px;
+}
+
+.span_day {
+  font-size: 16px;
+  font-weight: 500;
+  padding-bottom: 20px;
+}
+.heading_time {
+  padding-left: 50px;
+  height: 10px;
+  font-weight: 300;
+}
+
+
+/* middle section main div */
+
+.middle_section_main_div{
+
+    background-color: #fef9f7;
+    color: black;
+ 
+    border :1px solid black;
+    font-size: 12px;
    
+    height:150px;
     
 }
-.right_input_div >input{
-    width: 100%;
-    height:40px;
-    border-color: white;
-    border: 0;
+.middle_section_upper_div{
+    display: flex;
+    width: 95%;
+    margin:auto;
+    margin-top: 20px;
+    justify-content: space-between;
 }
 
-.play_icon{
-font-size: 40px;
-color:#d164c5
+.middle_section_upper_left_div{
+    width:20%;
+   
+}
+.middle_section_upper_right_div{
+  
+    width:52%;
+    display: flex;
+    justify-content: space-evenly;
+    
+    align-items: center;
+   
+    gap:25px;
+}
 
+.middle_section_week_div{
+    display: flex;
+    align-items: center;
+    gap:20px
 }
-.second_play_icon{
-    color:black;
-    font-size: 20px;
+.middle_section_box_div{
+    display: flex;
+    align-items: center;
+   
+    gap:20px
 }
-.plus_icon{
-    margin-top: 5px;
-    color:#95899b;
-    font-size: 20px;
+.middle_section_box_line{
+    border-bottom: 5px solid grey;
+    margin-top:5px ;
+    width: 95%;
+    margin: auto;
 }
-.stop_icon{
-    font-size: 40px;
-    color:#e87161
+
+.middle_section_noproject_div{
+    margin-bottom: 5px;
+    font-size: 13px;
+    margin-left: 40px;
+}
+
+
+.middle_section_box_div{
+    border: 1px solid;
+    width:270px;
+    height: 30px;
+    display: flex;
+    justify-content: space-around;
+    border-radius: 10px;
+
+  text-align: center;
 }
